[gd_scene load_steps=5 format=3 uid="uid://dmwh870tgkdrn"]

[ext_resource type="Script" path="res://scripts/quack_world/components/ducky_cage.gd" id="1_f1jpl"]
[ext_resource type="Texture2D" uid="uid://dqwkmti066fl7" path="res://icon.svg" id="1_f8m0n"]
[ext_resource type="PackedScene" uid="uid://i64fnv6a3so5" path="res://scenes/quack_world/ui/ducky_pointer.tscn" id="2_504jp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_11k87"]
radius = 127.475

[node name="DuckyCage" type="Node2D"]
script = ExtResource("1_f1jpl")
pointer = ExtResource("2_504jp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_f8m0n")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_11k87")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-134, -136)
rect = Rect2(-10, -10, 300, 300)

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
